@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.sample.webproject</groupId>
   <artifactId>SampleWebApp-1.0.0</artifactId>
@@ -7,7 +7,6 @@
   <version>1.0-SNAPSHOT</version>
   <name>SampleWebApp Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -16,25 +15,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  
   <build>
     <finalName>SampleWebApp</finalName>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>3.3.2</version>
-      </plugin>
-      <plugin>
-        <groupId>org.sonarsource.scanner.maven</groupId>
-        <artifactId>sonar-maven-plugin</artifactId>
-        <version>3.9.1.2184</version>
-        <configuration>
-          <sonar.host.url>http://ec2-35-175-171-115.compute-1.amazonaws.com:9000</sonar.host.url>
-          <sonar.login>c50c65be9444f17f2ac41a54caf5607663115de7</sonar.login>
-          <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
-        </configuration>
-      </plugin>
-    </plugins>
   </build>
 </project>
